2004/02/10 19:01 (+0100) kaffeetisch

	* t/GnomeConfig.t: Re-enable the get_float_with_default, with
	skips.  The relevant bug has been fixed in libgnomeui 2.5.4.

	* t/GnomeIconSelection.t: Don't check the return value of
	get_icon, there seems to be no way to predict it.

2004/02/10 17:01 (+0100) kaffeetisch

	Applying a patch from muppet.

	A copyright.pod
	A doctypes
	* MANIFEST
	* Makefile.PL
	* gnome2perl.h: Use the new features of ExtUtils::Depends and
	ExtUtils::PkgConfig.  Depend on Gnome2::Canvas.  Use
	'gnome2perl-versions.h' for the version macros.

2004/01/27 19:40 (+0100) kaffeetisch

	* t/GnomeClient: Use the correct
	Gnome2::Client->interaction_key_return syntax.

	* xs/GnomeAppHelper.xs: Mark ix unused in some places.

	* xs/GnomeClient.xs
	* xs/GnomeUtil.xs: Avoid creating two xsubs with ALIAS when we
	really only want one.

	* gnome2perl.h
	* xs/GnomeWindow.xs: Remove some apparently unneeded #include's.

2004/01/26 01:47 (-0500) muppetman

	* xs/GnomeWindow.xs: bad muppet, that should've been
	#undef GNOME_DISABLE_DEPRECATED.

2004/01/25 23:26 (-0500) muppetman

	* xs/GnomeClient.xs, xs/GnomeUtil.xs: hush unused var warnings

	* xs/GnomeWindow.xs: #define GNOME_DISABLE_DEPRECATED, so
	gnome_window_toplevel_set_title() is defined at compile time.  (it
	was deprecated in october of '03.)

2004/01/24 21:44 (-0500) rwmcfa1

	* Makefile.PL: removed runtime_reqs stuff, replaced by the pkg-config 
	trick
	
	* perl-Gnome2.spec.in: use pkg-config for Requires version

2004/01/14 18:16 (-0500) muppetman

	* t/GnomePasswordDialog.t: GnomePasswordDialog and
	GnomeAuthenticationManager didn't appear until 2.3.6, use version
	guards to skip tests on older releases.

2003/12/31 11:45 (+0100) kaffeetisch

	* xs/BonoboDockItem.xs: Remove functions that weren't supposed to
	be bound in the first place (namely set_lock, detach, attach,
	unfloat, grab_pointer, drag_floating, handle_size_request,
	get_floating_position, and get_grip).  That also hushes compiler